[gd_scene load_steps=4 format=3 uid="uid://i47f3r2rqsf6"]

[ext_resource type="Script" uid="uid://bb2tkab6q6jy6" path="res://addons/parley/components/action/action_node_editor.gd" id="1_3lxj7"]
[ext_resource type="PackedScene" uid="uid://m3v11vm16l8y" path="res://addons/parley/components/node/node_editor.tscn" id="1_ngxen"]
[ext_resource type="Texture2D" uid="uid://c4qx01xbrjp7h" path="res://addons/parley/assets/Edit.svg" id="3_3rqr3"]

[node name="ActionNodeEditor" instance=ExtResource("1_ngxen")]
script = ExtResource("1_3lxj7")
description = ""
action_type = 0
action_script_ref = ""
values = []
type = 3

[node name="TitleLabel" parent="TitleContainer/TitlePanelContainer/TitleMarginContainer/TitlePartsContainer" index="0"]
text = "Action [ID: ]"

[node name="ActionDescriptionContainer" type="VBoxContainer" parent="BodyMarginContainer/BodyScrollContainer/BodyContainer" index="0"]
layout_mode = 2

[node name="DescriptionEditor" type="TextEdit" parent="BodyMarginContainer/BodyScrollContainer/BodyContainer/ActionDescriptionContainer" index="0"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Action description (Eg. Register that Clue 1 was found)"
wrap_mode = 1
scroll_past_end_of_file = true
scroll_fit_content_height = true
use_default_word_separators = false

[node name="CodeEdit" type="CodeEdit" parent="BodyMarginContainer/BodyScrollContainer/BodyContainer/ActionDescriptionContainer" index="1"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
text = "func run() -> void:
  pass"
placeholder_text = "func run() -> void:
  pass"
scroll_past_end_of_file = true
scroll_fit_content_height = true
symbol_lookup_on_click = true
code_completion_enabled = true

[node name="HSeparator1" type="HSeparator" parent="BodyMarginContainer/BodyScrollContainer/BodyContainer" index="1"]
layout_mode = 2

[node name="ActionTypeContainer" type="HBoxContainer" parent="BodyMarginContainer/BodyScrollContainer/BodyContainer" index="2"]
layout_mode = 2

[node name="ActionTypeLabel" type="Label" parent="BodyMarginContainer/BodyScrollContainer/BodyContainer/ActionTypeContainer" index="0"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Type:"

[node name="ActionTypeEditor" type="OptionButton" parent="BodyMarginContainer/BodyScrollContainer/BodyContainer/ActionTypeContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 1
popup/item_0/text = "Script"
popup/item_0/id = 0

[node name="HSeparator2" type="HSeparator" parent="BodyMarginContainer/BodyScrollContainer/BodyContainer" index="3"]
layout_mode = 2

[node name="ActionScriptContainer" type="HBoxContainer" parent="BodyMarginContainer/BodyScrollContainer/BodyContainer" index="4"]
layout_mode = 2

[node name="ActionScriptLabel" type="Label" parent="BodyMarginContainer/BodyScrollContainer/BodyContainer/ActionScriptContainer" index="0"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Action: "

[node name="ActionScriptSelector" type="OptionButton" parent="BodyMarginContainer/BodyScrollContainer/BodyContainer/ActionScriptContainer" index="1"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
size_flags_horizontal = 3
text_overrun_behavior = 3
clip_text = true

[node name="EditActionScriptButton" type="Button" parent="BodyMarginContainer/BodyScrollContainer/BodyContainer/ActionScriptContainer" index="2"]
layout_mode = 2
tooltip_text = "Edit Action Script."
icon = ExtResource("3_3rqr3")

[node name="ActionValuesContainer" type="HBoxContainer" parent="BodyMarginContainer/BodyScrollContainer/BodyContainer" index="5"]
layout_mode = 2

[node name="ActionValuesLabel" type="Label" parent="BodyMarginContainer/BodyScrollContainer/BodyContainer/ActionValuesContainer" index="0"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Values:"

[node name="ActionValueDescription" type="TextEdit" parent="BodyMarginContainer/BodyScrollContainer/BodyContainer/ActionValuesContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Clue1"
wrap_mode = 1
scroll_past_end_of_file = true
scroll_fit_content_height = true
use_default_word_separators = false

[connection signal="text_changed" from="BodyMarginContainer/BodyScrollContainer/BodyContainer/ActionDescriptionContainer/DescriptionEditor" to="." method="_on_action_description_text_changed"]
[connection signal="item_selected" from="BodyMarginContainer/BodyScrollContainer/BodyContainer/ActionTypeContainer/ActionTypeEditor" to="." method="_on_action_type_option_item_selected"]
[connection signal="item_selected" from="BodyMarginContainer/BodyScrollContainer/BodyContainer/ActionScriptContainer/ActionScriptSelector" to="." method="_on_action_script_selector_item_selected"]
[connection signal="pressed" from="BodyMarginContainer/BodyScrollContainer/BodyContainer/ActionScriptContainer/EditActionScriptButton" to="." method="_on_edit_action_script_button_pressed"]
[connection signal="text_changed" from="BodyMarginContainer/BodyScrollContainer/BodyContainer/ActionValuesContainer/ActionValueDescription" to="." method="_on_action_value_description_text_changed"]
